Fix page horizontal overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -391,14 +391,22 @@ h2 {
 
 #donation .donation-list {
   text-align: center;
+  display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 #donation .donation-list img {
-  height: 25rem;
-  width: auto;
-  margin: 5px;
+  width: 25rem;
+  margin: 15px;
   transition: all 0.2s ease-in-out;
+}
+
+@media (max-width: 992px) {
+  #donation .donation-list img {
+    width: 85%;
+  }
 }
 
 #donation .donation-list img:hover {
